--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="app"><%- html %></div>             
+    <div id="app"><%- html %></div>
+    <script>
+      window.INIT_STATE = <%- JSON.stringify(initState) %>;
+    </script>             
     <script src="./app.js"></script>
   </body>
 </html>
